# cookiecutter-capybarasai-python-generic

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  mkdocs.yml  pyproject.toml
